// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DbStore Create Test: Successfully removed 1`] = `
<div>
  <a
    className="button is-success"
  >
    Deleted
  </a>
</div>
`;

exports[`DbStore Create Test: While removing 1`] = `
<div>
  <a
    className="button is-warning"
    onClick={[Function]}
  >
    Delete
  </a>
</div>
`;

exports[`DbStore Create Test: after login 1`] = `
<div>
  <a
    className="button is-warning"
    onClick={[Function]}
  >
    Delete
  </a>
</div>
`;

exports[`DbStore Create Test: before login 1`] = `
<div>
  <a
    className="button is-warning"
    onClick={[Function]}
  >
    Delete
  </a>
</div>
`;

exports[`DbStore Create Test: error for not exisiting anymore 1`] = `[NotFound: No record found for id '0']`;

exports[`DbStore Create Test: fetch existing resource 1`] = `
Object {
  "guestName": "myText",
  "id": 0,
  "myVal": 420,
}
`;

exports[`DbStore Create Test: remove render 1`] = `
<div>
  <a
    className="button is-warning"
    onClick={[Function]}
  >
    Delete
  </a>
</div>
`;

exports[`DbStore Create Test: remove result 1`] = `
Object {
  "guestName": "myText",
  "id": 0,
  "myVal": 420,
}
`;
